# web_hw_8

./: pyproject.toml
part_1/: fill_db.py  model.py  query.py
part_2/: consumer_email.py  consumer_sms.py  model.py  producer.py  test.py
