[tool.poetry]
name = "hw-8"
version = "0.1.0"
description = ""
authors = ["Anton Holovin <54354764+Unfeir@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hw_8"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
colorama = "^0.4.6"
redis = "^4.5.1"
redis-lru = "^0.1.2"
faker = "^17.6.0"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
